got profile/board loading done. making note filtering/searching work (sorting is buggy, but thats a core issue). got rid of awful flickering by changing the way the render_to_fragment stuff works in the track_controller (and updating the create_subcontroller function in the note index)

--- a/css/site/notes.css
+++ b/css/site/notes.css
@@ -194,7 +194,7 @@ ul.note_list .note span.break {font-size: 1px;}
 
 /* masonry */
 ul.note_list.list_masonry > li {
-	position: absolute;		/* makes masonry JS a bit faster */
+	/*position: absolute;		[> makes masonry JS a bit faster <]*/
 	float: left;
 	display: block;
 	width: 232px;
